Add navigation link

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,4 +1,6 @@
-<%= page_header @user.email_address %>
+<%= page_header @user.email_address do %>
+  <%= link_to "Back to Users", admin_users_path, class: "btn btn-outline-secondary" %>
+<% end %>
 
 <div class="list-group">
   <div class="list-group-item">
