--- a/app/views/feeds/_reposting_display.html.erb
+++ b/app/views/feeds/_reposting_display.html.erb
@@ -2,9 +2,9 @@
 <% reposting_ready = feed.access_token&.active? && feed.target_group.present? %>
 
 <% if reposting_ready %>
-  <i class="bi bi-check-circle-fill text-success me-2"></i>
+  <%= icon("check-circle-fill", css_class: "text-success me-2") %>
 <% else %>
-  <i class="bi bi-circle text-muted me-2"></i>
+  <%= icon("circle", css_class: "text-muted me-2") %>
 <% end -%>
 
 <strong class="me-2">Reposting target:</strong>
@@ -25,5 +25,5 @@
     class: "text-decoration-none ms-2",
     data: { turbo_prefetch: false, turbo_stream: true },
     title: "Edit" do %>
-  <i class="bi bi-pencil text-secondary"></i>
+  <%= icon("pencil", css_class: "text-secondary") %>
 <% end %>
