--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -11,8 +11,8 @@
     <table class="table table-hover table-bordered text-nowrap">
       <thead>
         <tr>
-          <th style="width: 1%;" class="text-center"><i class="bi bi-calendar-event"></i></th>
-          <th style="width: 1%;" class="text-center"><i class="bi bi-exclamation-circle"></i></th>
+          <th style="width: 1%;" class="text-center"><%= icon("calendar-event") %></th>
+          <th style="width: 1%;" class="text-center"><%= icon("exclamation-circle") %></th>
           <th>Type</th>
           <th>Message</th>
           <th>User</th>
