--- a/app/views/feeds/_content_source_display.html.erb
+++ b/app/views/feeds/_content_source_display.html.erb
@@ -1,8 +1,8 @@
 <%# locals: (feed:) %>
 <% if feed.can_be_previewed? %>
-  <i class="bi bi-check-circle-fill text-success me-2"></i>
+  <%= icon("check-circle-fill", css_class: "text-success me-2") %>
 <% else %>
-  <i class="bi bi-circle text-muted me-2"></i>
+  <%= icon("circle", css_class: "text-muted me-2") %>
 <% end %>
 
 <strong class="me-2">Source:</strong>
@@ -23,5 +23,5 @@
     class: "text-decoration-none ms-2",
     data: { turbo_prefetch: false, turbo_stream: true },
     title: "Edit" do %>
-  <i class="bi bi-pencil text-secondary"></i>
+  <%= icon("pencil", css_class: "text-secondary") %>
 <% end %>
