--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <%= link_to settings_path, class: "nav-link" do %>
-                  <i class="bi bi-gear"></i>
+                  <%= icon("gear") %>
                 <% end %>
               </li>
             </ul>
