--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -34,6 +34,14 @@
           <%= link_to "Add a token", new_settings_access_token_path, class: "text-decoration-none ms-2" %>
         <% end %>
       </div>
+
+      <div class="list-group-item">
+        <strong>Invites:</strong>
+        <%= pluralize(@user.available_invites, 'available') %>,
+        <%= pluralize(@user.created_invites.count, 'created') %>,
+        <%= pluralize(@user.created_invites.where.not(invited_user_id: nil).count, 'used') %>
+        <%= link_to "Manage", invites_path, class: "text-decoration-none ms-2" %>
+      </div>
     </div>
   </div>
 </div>
