Update landing text

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -3,7 +3,7 @@
 <div class="row justify-content-center mt-5">
   <div class="col-md-8 text-center">
     <h1 class="display-4 mb-4">Welcome to Feeder</h1>
-    <p class="lead mb-4">A feed aggregation service for your content needs.</p>
+    <p class="lead mb-4">A reposting service for Freefeed.</p>
 
     <div class="d-flex gap-3 justify-content-center">
       <%= link_to "Sign In", new_session_path, class: "btn btn-primary btn-lg" %>
