Simplify invites stats display when all zeroes

--- a/app/views/invites/_stats.html.erb
+++ b/app/views/invites/_stats.html.erb
@@ -1,6 +1,12 @@
-<div class="alert alert-info">
-  <strong>Available invites:</strong> <%= available_invites_count %> |
-  <strong>Created invites:</strong> <%= created_invites_count %> |
-  <strong>Invited users:</strong> <%= invited_users_count %> |
-  <strong>Unused invites:</strong> <%= unused_invites_count %>
-</div>
+<% if created_invites_count > 0 || invited_users_count > 0 || unused_invites_count > 0 %>
+  <div class="alert alert-info">
+    <strong>Available invites:</strong> <%= available_invites_count %> |
+    <strong>Created invites:</strong> <%= created_invites_count %> |
+    <strong>Invited users:</strong> <%= invited_users_count %> |
+    <strong>Unused invites:</strong> <%= unused_invites_count %>
+  </div>
+<% else %>
+  <div class="alert alert-info">
+    <strong>Available invites:</strong> <%= available_invites_count %>
+  </div>
+<% end %>
