--- a/app/views/invites/_table.html.erb
+++ b/app/views/invites/_table.html.erb
@@ -22,7 +22,7 @@
             </td>
             <td>
               <div class="d-flex align-items-center gap-2">
-                <code class="flex-grow-1"><%= invite.id %></code>
+                <code><%= invite.id %></code>
                 <button type="button" class="btn btn-sm btn-link text-muted p-0" data-controller="clipboard" data-clipboard-text-value="<%= new_registration_url(code: invite.id) %>" data-action="clipboard#copy" title="Copy invitation link to clipboard">
                   <%= icon("clipboard") %>
                 </button>
