Reorder invite columns and add highlight animation for new invites

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -46,3 +46,17 @@
     white-space: nowrap;
   }
 }
+
+// Highlight flash animation for new items
+@keyframes highlight-flash {
+  0% {
+    background-color: rgba(25, 135, 84, 0.2);
+  }
+  100% {
+    background-color: transparent;
+  }
+}
+
+.highlight-new {
+  animation: highlight-flash 2s ease-out;
+}
