--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -90,7 +90,7 @@
 
 <h3 class="mt-4 mb-3">Invitations</h3>
 
-<div class="list-group">
+<div class="list-group mb-3">
   <div class="list-group-item">
     <div class="d-flex justify-content-between align-items-center">
       <div>
@@ -99,13 +99,15 @@
       </div>
       <div>
         <%= form_with model: @user, url: admin_user_available_invites_path(@user), method: :patch, class: "d-flex gap-2 align-items-center", data: { turbo_frame: "_top" } do |form| %>
-          <%= form.number_field :available_invites, class: "form-control form-control-sm", style: "width: 100px;" %>
+          <%= form.number_field :available_invites, min: 0, class: "form-control form-control-sm", style: "width: 100px;" %>
           <%= form.submit "Update", class: "btn btn-sm btn-primary" %>
         <% end %>
       </div>
     </div>
   </div>
+</div>
 
+<div class="list-group">
   <div class="list-group-item">
     <strong>Created Invites:</strong> <%= @user.created_invites.count %>
   </div>
