--- a/app/views/invites/_stats.html.erb
+++ b/app/views/invites/_stats.html.erb
@@ -1,3 +1,3 @@
 <div class="alert alert-info">
-  <strong>Available invites:</strong> <%= available_invites_count - created_invites_count %>
+  <strong>Available invites:</strong> <%= [0, available_invites_count - created_invites_count].max %>
 </div>
