--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -50,13 +50,17 @@
 // Highlight flash animation for new items
 @keyframes highlight-flash {
   0% {
-    background-color: rgba(25, 135, 84, 0.2);
+    background-color: rgba(25, 135, 84, 0.3);
   }
   100% {
     background-color: transparent;
   }
 }
 
-.highlight-new {
+tr.highlight-new {
   animation: highlight-flash 2s ease-out;
+}
+
+tr.highlight-new:hover {
+  animation: none;
 }
