--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row justify-content-center">
   <div class="col-md-6">
-    <% if @used_invite %>
+    <% if @invite.used? %>
       <p>This invitation link has already been used.</p>
       <p>But here are some <a href="https://duckduckgo.com/?q=cat+pictures&ia=images&iax=images">cat pictures</a>.</p>
     <% else %>
