--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -69,7 +69,7 @@
                     <%= link_to "Validate", settings_access_token_validation_path(access_token), class: "dropdown-item", data: { turbo_method: :post } %>
                   </li>
                   <li>
-                    <%= link_to "Replace", edit_settings_access_token_path(access_token), class: "dropdown-item" %>
+                    <%= link_to "Edit", edit_settings_access_token_path(access_token), class: "dropdown-item" %>
                   </li>
                   <li><hr class="dropdown-divider"></li>
                   <li>
