--- a/app/views/feeds/_content_source_form.html.erb
+++ b/app/views/feeds/_content_source_form.html.erb
@@ -1,5 +1,5 @@
 <%# locals: (feed:) %>
-<div class="card mt-3">
+<div class="card mt-3" data-controller="form-collapse">
   <div class="card-header">
     <h5 class="card-title mb-0">Edit Source</h5>
   </div>
@@ -38,9 +38,7 @@
 
   <div class="d-flex gap-2">
     <%= form.submit "Save", class: "btn btn-primary" %>
-    <%= link_to "Cancel", feed_path(feed, format: :turbo_stream),
-        class: "btn btn-outline-secondary",
-        data: { turbo_prefetch: false, turbo_stream: true } %>
+    <button type="button" class="btn btn-outline-secondary" data-action="click->form-collapse#cancel">Cancel</button>
   </div>
     <% end %>
   </div>
