--- a/app/views/settings/access_token_groups/index.turbo_stream.erb
+++ b/app/views/settings/access_token_groups/index.turbo_stream.erb
@@ -14,6 +14,7 @@
     </select>
     <div class="form-text" data-groups-target="helpText">
       Select the Freefeed group
+      <a href="#" data-action="click->groups#refreshGroups" class="ms-2">Refresh</a>
     </div>
     <div class="invalid-feedback">Select a target group.</div>
   </div>
