--- a/app/views/posts/destroy.turbo_stream.erb
+++ b/app/views/posts/destroy.turbo_stream.erb
@@ -4,7 +4,7 @@
 
 <%= turbo_stream.prepend "flash-messages" do %>
   <div class="alert alert-info alert-dismissible fade show" role="alert">
-    Post withdrawal initiated. It remains visible in the app.
+    The post will be withdrawn from FreeFeed but will remain here to prevent it from being imported again.
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% end %>
