Order Posts table

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -13,6 +13,30 @@
   }
 }
 
+// Sortable table headers
+.sortable {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+  user-select: none;
+  white-space: nowrap;
+
+  &:hover {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  &.sorted-asc::after {
+    content: " ▲";
+    font-size: 0.8em;
+  }
+
+  &.sorted-desc::after {
+    content: " ▼";
+    font-size: 0.8em;
+  }
+}
+
 // Posts table styling
 .posts-table {
   width: 100%;
