--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
 
       <%= pagination_for @posts,
                          collection_name: "posts",
-                         path_helper: ->(page) { posts_path(page: page, feed_id: params[:feed_id]) } %>
+                         path_helper: ->(page) { posts_path(page: page, feed_id: params[:feed_id], sort: params[:sort], direction: params[:direction]) } %>
     <% else %>
       <div class="text-center py-5">
         <p>No posts yet</p>
